** Farclan Cherry Cake (Mage, Cleric) - Medium
* Weapon Stones
** Burning Powerstone (Mage, Cleric) - High
** Flaring Glyph (Mage, Cleric) - Medium
** Exquisite Whetstone (Warrior, Rogue) - High
** Fine Whetstone (Warrior, Rogue) - Medium
* Potions/Vials
** Herioc Brightsurge Vial (Mage, Cleric) - High
** Herioc Powersurge Vial (Warrior, Rogue) - High
* Other/Armor
** Performance Insoles (All) - High
** Cusioned Insoles (All) - High

System
* New: Added a new slash command /kbmbuffs. You can macro this with %t or manually type a name to return a list of buffs with KBM ID's on that Unit. (Players or NPC's)
* Change: Ability IDs have been changed to the new format for Rift 1.9 and above. This will cause compatibility issues with older KBMs.
* Change: Buff Add events triggered for already cached buffs are now ignored.
* Change: Updated LibSRM to 1.2.0 which now includes LibUnitChange 2.1
* Removed: Global reference to bDetails in Buff Remove handlers.
* Removed: Global reference to TriggerObj in Buff Remove handlers.
* Removed: Global reference to TriggerObj in Buff Add handlers.
* Removed: Global reference to TriggerMod in Buff Add handlers.

CPU Monitor
* New: Added support for Ready Check CPU tracking.

Tank-Swap
* Fixed: Very rare case where Debuff.remaining could return nil. (Generally due to lag)

Rez Master
* Fixed: Actually applied the fix correctly from the last Revision this time.

Infernal Dawn
* Laethys
** New: Added Touch of Gold personal alert for P3. This will only show your timer.
** Fixed: Corrected Phase Two Start trigger.
** Change: Added the % (pattern matching escape code) before ? in an attempt to get this to trigger the Phase Two Transition capture.
** Change: Phase 1 objective now reads 51% rather than the incorrect 50%.

Master Mode Caduceus Rise
* Ashcaller Zael
** Fixed: Stopped the smaller Adds from overwriting the bosses UID, enabling the encounter to finally trigger a victory.

Chronicles